--- a/_posts/2023-3-25-I-485_document.md
+++ b/_posts/2023-3-25-I-485_document.md
@@ -6,21 +6,32 @@ categories: I-485
 tags: [I-485]
 ---
 ## 타임라인
-* 접수: 2022년 6월
-* 승인: 진행중
+* priority date: 2022년 6월 (개인 변호사 선임 후 I-140 (NIW) 진행)
+* 2023년 4월: 서류 제출 (회사에서 I-485 지원)
+* 2023년 5월: Fingerprint
+* 2023년 9월: New card is being produced
 
 ## 사진
 * 2x2 (inch) 사진 6장이 필요. 
 * 포토샵 등으로 4x6 사이즈 캔버스에 2x2 사진 두장씩 배치한 후 CVS, Walgreen 등에서 4x6 3장 인화하여 잘라서 사용함.
 
-# Birth certificate
+## Birth certificate
 * 기본증명서 (상세) + 가족관계증명서 (상세)
-<!--* 기본증명서 및 가족관계증명서 영문번역하기 [link]
--->
+* 기본증명서 영문번역 템플릿 [download](/assets/document/Birth_certificate_Eng.docx)
+* 가족관계증명서 영문번역 템플릿 [download](/assets/document/Family_relations_certificate_Eng.docx)
 
 ## Medical examination (I-693)
 * USCIS I-693 [link](https://www.uscis.gov/i-693)
 * USCIS 사이트에서 공인된 civil surgeon 에게 medical examination 을 받아야 함 (USCIS find a civil surgeon [link](https://www.uscis.gov/tools/find-a-civil-surgeon))
-* Medical examination 비용은 병원마다 상의하지만 약 $300불 정도임 (소변검사, 피검사 가격이 포함되어 있음)
-<!--* Medical examination 항목 중 vaccine requirement:
--->
+* Medical examination 비용은 병원마다 상의하지만 약 $300불 정도임 (소변검사, 피검사 가격 포함)
+* Medical examination 항목 중 vaccine requirement:
+    * USCIS vaccination requirements [ilnk](https://www.uscis.gov/tools/designated-civil-surgeons/vaccination-requirements)
+    * CDC 연령대별 접종 필요한 백신 리스트 [link](https://www.cdc.gov/immigrantrefugeehealth/civil-surgeons/vaccinations.html?CDC_AA_refVal=https%3A%2F%2Fwww.cdc.gov%2Fimmigrantrefugeehealth%2Fexams%2Fti%2Fcivil%2Fvaccination-civil-technical-instructions.html)
+    * 18-64 세 vaccine requirements:
+        * Td/Tdap: 파상풍
+        * Measles, Mumps, and Rubella: MMR - 홍역, 볼거리, 풍진
+        * Hepatitis B: B형 간염
+        * Varicella: 수두
+        * Infleunza: 독감
+        * COVID-19
+    * 백신 접종은 CVS, Walgreen 등에서 가능하며, 대부분의 의료보험이 무료 접종 cover 해줌
