--- a/_posts/2023-3-5-FBAR 2022.md
+++ b/_posts/2023-3-5-FBAR 2022.md
@@ -32,6 +32,9 @@ tags: [Tax, FBAR]
 * Home
     * Filing name: 임의로 작성 (e.g., YOURNAME FBAR 2022)
 * Part I Filer Information: 개인정보 기입
+    * 2 개인 - Individual
+    * 3 SSN 번호
+    * 3a SSN/ITIN
     * 14a 미국 외 금융계좌가 25개 이상인 경우 Yes
     * 14b 본인이 서명 권한을 가지고 있는 미국 외 금융 계좌가 25개 이상인 경우 Yes
 * Part II Information on Financial Account(s) Owned Separately: 단독소유 금융 계좌 정보 
@@ -51,6 +54,7 @@ tags: [Tax, FBAR]
 | 카카오뱅크 | CITIBANK KOREA INC - KAKAO | 50 SAEMUNAN-RO, JONGNO-GU, SEOUL 03184 REPUBLIC OF KOREA|
 | 신한은행 | SHINHAN BANK | 20, SEJONG-DAERO 9-GIL, JUNG-GU, SEOUL 04513 REPUBLIC OF KOREA|
 | KEB하나은행 | HANA BANK | 35, EULJI-RO, JUNG-GU, SEOUL 04523 REPUBLIC OF KOREA|
+| KB국민은행 | KB KOOKMIN BANK | 26, Gukjegeumyung-ro 8-gil, Yeongdeungpo-gu, Seoul 07331 REPUBLIC OF KOREA|
 
 출처:
 * 우리은행: [우리은행 홈페이지](https://spot.wooribank.com/pot/Dream?withyou=FXFCR0009)
